Lots more Lombok Updates - Draft needs tests fixed